# PiVI-Trip-Logger

./: .gitignore  CMakeLists.txt
src/: db.c  db.h  frames.c  frames.h  include.h  main.c
src/core/: config.h  errmacros.h  logger.c  utils.c  utils.h
src/data/: measurement.c  measurement.h  record.c  record.h  trip.c  trip.h
web/: __init__.py  main.py
web/frontend/: .eslintrc.json  package.json  tsconfig.json
web/frontend/public/: index.html
web/frontend/src/: App.tsx  index.tsx
web/frontend/src/components/: StatCard.tsx
web/frontend/src/model/: Record.tsx  Trip.tsx
web/frontend/src/pages/: TripPage.tsx  TripsPage.tsx
web/model/: record.py  trip.py
